fix(Alon) removes dep on viewport on mobile to avoid screen jerking

--- a/src/components/themes/Alon-01/index.module.sass
+++ b/src/components/themes/Alon-01/index.module.sass
@@ -1,7 +1,8 @@
 @import @themes/Alon-01/common
 
 .container
-	height: 100vh
-	height: 100dvh
+	height: 100%
 	+from($mainBreakpoint)
+		height: 100vh
+		height: 100dvh
 		display: flex
